fixing feature image mobile spacing

--- a/assets/styles/pages/article/_feature.scss
+++ b/assets/styles/pages/article/_feature.scss
@@ -115,6 +115,11 @@
 		display: none;
 	}
 
+	.page-feature__set & {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 	&:hover::after {
 		background-color: rgba( $color__black-0, 0.25 );
 		box-shadow: inset 0 0 3rem 2rem rgba( $color__black-0, 0.35 );
